Refine project descriptions for clarity and accuracy
Updated various sections of the projects page to enhance clarity and accuracy of project descriptions, including changes to action and impact statements.

--- a/projects.html
+++ b/projects.html
@@ -27,12 +27,11 @@
             border: 1px solid #e2e8f0; /* Light border */
             border-radius: 0.75rem; /* Rounded corners */
         }
-        /* Style for Tableau Embed (Optional: make it responsive) */
+        /* Style for Tableau Embed */
         .tableau-responsive-container {
             position: relative;
             width: 100%;
-            /* Adjust padding-bottom for aspect ratio. 75% for 4:3, 56.25% for 16:9 */
-            padding-bottom: 75%; /* Example: Adjust this based on your Tableau dashboard's aspect ratio if needed */
+            padding-bottom: 75%;
             height: 0;
             overflow: hidden;
         }
@@ -72,11 +71,11 @@
                 <div class="md:col-span-2 lg:col-span-3 bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">E-commerce Sales Performance Analysis (Amazon Sales)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        **Problem & Action:** Developed an interactive dashboard to visualize sales trends, identify top-performing products, and analyze customer behavior using **SQL** for data preparation and **Tableau** for visualization. 
+                        **Action:** Developed an interactive dashboard to visualize sales trends, identify top-performing products, and analyze customer behavior. Leveraged **SQL** for precise data preparation and **Tableau** for visualization.
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li>**Tools:** SQL (SQLite), Excel, Tableau Public</li>
-                        <li>**Impact:** Identified monthly sales trends and **three key regions for promotional focus**, resulting in a recommended **15% reallocation of marketing budget** for Q4.</li>
+                        <li>**Impact:** Identified monthly sales trends and **three key regions for promotional focus**, demonstrating a commitment to the **100% compliance and precision** needed for critical analysis[cite: 16].</li>
                     </ul>
                     
                     <h4 class="text-lg font-medium text-gray-800 mt-4 mb-2">Interactive Dashboard:</h4>
@@ -102,7 +101,6 @@
                         <script type='text/javascript'>
                             var divElement = document.getElementById('viz1753855016132');
                             var vizElement = divElement.getElementsByTagName('object')[0];
-                            // FIX: Removed fixed width and height logic for mobile responsiveness.
                             vizElement.style.width='100%';
                             vizElement.style.height='727px'; 
                             var scriptElement = document.createElement('script');
@@ -122,13 +120,13 @@
                 </div>
 
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Customer Churn Prediction Model (Ongoing Research)</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Customer Churn Prediction Model (Conceptual)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        **Action:** Developed a preliminary machine learning model in Python to analyze customer behavioral data and predict potential churn risk. The model focuses on identifying key user interactions and demographics that precede account cancellation.
+                        **Action:** Developed a preliminary machine learning model in Python to analyze customer behavioral data and predict potential churn risk. This effort mirrored the **logical and systematic approach** I used when interpreting technical schematics in operational logistics[cite: 4].
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li>**Tools:** **Python** (Pandas, Scikit-learn), SQL, Jupyter Notebook</li>
-                        <li>**Outcome:** Identified key factors contributing to customer churn (e.g., specific service usage), suggesting targeted retention strategies for the support team.</li>
+                        <li>**Outcome:** Identified key factors contributing to customer churn (e.g., specific service usage), allowing for the suggestion of targeted retention strategies.</li>
                     </ul>
                     <a href="https://github.com/Scan93/S.MurtyPortfolio" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project on GitHub</a>
                 </div>
@@ -136,11 +134,11 @@
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">Market Basket Analysis for Retail Cross-Selling</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        **Action:** Explored large transactional datasets to discover strong association rules between purchased items using the **Apriori Algorithm** concept. The goal is to inform product bundling and cross-promotional campaigns.
+                        **Action:** Explored large transactional datasets to discover strong association rules between purchased items using the **Apriori Algorithm** concept. The analysis ensures **detailed logistical coordination** in product placement, reflecting my past experience in supply chain management[cite: 29].
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li>**Tools:** Python (Conceptual modeling)</li>
-                        <li>**Impact:** Provided insights into popular product combinations with a high "confidence" score for improved product placement and targeted cross-selling offers.</li>
+                        <li>**Outcome:** Provided insights into popular product combinations with a high "confidence" score for improved product bundling and targeted cross-selling offers.</li>
                     </ul>
                     <a href="https://github.com/Scan93/S.MurtyPortfolio" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project on GitHub</a>
                 </div>
@@ -151,7 +149,7 @@
 
     <footer class="bg-gray-800 text-white text-center p-4 mt-8 shadow-inner">
         <div class="container mx-auto">
-            <p>&copy; Scandal Murty Portfolio. Updated November 2025.</p>
+            <p>&copy; Scandal Murty Portfolio. Updated September 2025.</p>
             <p class="text-sm mt-2">
                 Connect with me:
                 <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="text-blue-400 hover:underline mx-2">LinkedIn</a> |
