--- a/python-example.html
+++ b/python-example.html
@@ -62,7 +62,7 @@
             </p>
 
             <div class="code-container">
-                <pre class="code-text">
+                <pre <script src="https://gist.github.com/Scan93/b1dc1028fa2edc82cb58def37d64bdfb.js"></script>">
 # 1. Import Libraries
 import pandas as pd
 import numpy as np
