Refactor code container to my-8 class
Updated the HTML structure for better formatting.

--- a/python-example.html
+++ b/python-example.html
@@ -61,7 +61,7 @@
                 This example demonstrates my proficiency in **Python** for **data manipulation and preliminary analysis** using the `pandas` library. The script loads a sample CSV, cleans the data, and calculates basic descriptive statistics.
             </p>
 
-            <div class="code-container">
+            <div class="my-8">
                 <pre <script src="https://gist.github.com/Scan93/b1dc1028fa2edc82cb58def37d64bdfb.js"></script>">
 # 1. Import Libraries
 import pandas as pd
