Remove bold formatting from project descriptions

--- a/hobbies.html
+++ b/hobbies.html
@@ -43,7 +43,7 @@
         <section id="hobbies" class="bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Technical Hobbies & Personal Projects</h2>
             <p class="text-xl leading-relaxed text-gray-700 mb-8">
-                These personal projects demonstrate my **technical curiosity**, ability to **troubleshoot complex problems**, and commitment to **iterative design and precision**—skills directly transferable to data analysis and business operations.
+                These personal projects demonstrate my **technical curiosity, ability to **troubleshoot complex problems, and commitment to iterative design and precision—skills directly transferable to data analysis and business operations.
             </p>
             
             <div class="mb-8">
@@ -55,7 +55,7 @@
                             Designed and manufactured a custom, functional housing for a portable power bank, requiring precise tolerance planning and fit testing.
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Tools: **Trimble Sketchup**, FDM Printer, Calipers.</em>
+                            <em>Tools: Trimble Sketchup, FDM Printer, Calipers.</em>
                         </p>
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Printed+Power+Bank+Housing" alt="3D Printed Custom Power Bank Housing" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
@@ -65,7 +65,7 @@
                             Executed calibration prints (temperature towers, flow rates) and stress-tested various print settings to optimize material usage and print reliability.
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Skills: **Slicer software optimization**, precision calibration, troubleshooting mechanical/extrusion issues.</em>
+                            <em>Skills: Slicer software optimization, precision calibration, troubleshooting mechanical/extrusion issues.</em>
                         </p>
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Print+Calibration+Test" alt="3D Print Calibration Test Piece" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
@@ -78,10 +78,10 @@
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                         <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Simple Geometric Abstractions</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Learned the basics of **Blender** by creating various geometric shapes and combining them into abstract art pieces, focusing on light and texture.
+                            Learned the basics of Blender by creating various geometric shapes and combining them into abstract art pieces, focusing on light and texture.
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Tools: **Trimble Sketch Up**, Blender (basic modeling, rendering), architecture and design principles.</em>
+                            <em>Tools: Trimble Sketch Up, Blender (basic modeling, rendering), architecture and design principles.</em>
                         </p>
                         <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=3D+Model+Geometric+Art" alt="3D Modeled Geometric Abstraction" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
