Fix image source filename in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <header class="p-8 bg-gray-800 text-white text-center">
             
             <div class="mb-4 flex justify-center">
-                <img src="photos/portfolioimage.jpg" alt="SDM Logic Gate Avatar" class="w-32 h-32 rounded-full object-cover border-4 border-blue-500 shadow-lg">
+                <img src="photos/PortfolioImage.jpg" alt="SDM Logic Gate Avatar" class="w-32 h-32 rounded-full object-cover border-4 border-blue-500 shadow-lg">
             </div>
             
             <h1 class="text-5xl font-extrabold mb-1">SCANDAL MURTY</h1>
