Add profile image to header in index.html

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
 </head>
 <body class="min-h-screen">
     <div id="content" class="max-w-6xl mx-auto bg-white shadow-2xl">
-        
-        <header class="p-8 bg-gray-800 text-white text-center">
+
+        <div class="mb-4 flex justify-center">
+                <img src="photos/PortfolioImage.jpg" alt="SDM Logic Gate Avatar" class="w-32 h-32 rounded-full object-cover border-4 border-blue-500 shadow-lg">
+            </div>
+            <header class="p-8 bg-gray-800 text-white text-center">
             <h1 class="text-5xl font-extrabold mb-1">SCANDAL MURTY</h1>
             <h2 class="text-xl font-light text-blue-300">Data Analyst | Operational Logistics Specialist</h2>
             <p class="mt-4 max-w-3xl mx-auto text-gray-200">
