Revise professional summary in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="text-5xl font-extrabold mb-1">SCANDAL MURTY</h1>
             <h2 class="text-xl font-light text-blue-300">Aspiring Data Analyst | Operational & Logistical Mindset</h2>
             <p class="mt-4 max-w-3xl mx-auto text-gray-200">
-                A meticulous and results-driven professional leveraging **7 years of operational logistics experience** to transition into data analysis. Proven commitment to achieving **100% compliance** and utilizing **foundational knowledge** in SQL, Python, and Tableau to solve real-world business problems.
+                A detail-oriented professional with seven years of operational logistics experience, pursuing a transition into data analysis. Demonstrates a consistent record of achieving full compliance and applies foundational expertise in SQL, Python, and Tableau to address complex business challenges.
             </p>
             <div class="mt-6 flex justify-center space-x-4">
                 <a href="mailto:scandalmurty@gmail.com" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Email Me Directly</a>
