Revise dashboard description for clarity and focus

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="text-md font-medium text-gray-600 mb-3">**Goal:** Identify sales drivers and operational choke points using beginner tools to inform promotional spending.</p>
                         
                         <p class="text-gray-700 mb-4">
-                            Developed a comprehensive dashboard to analyze sales trends and customer behavior. Applied **foundational SQL** techniques for data cleaning and aggregation, and **Tableau** for visualization. This project required the meticulous data preparation skills honed through my **100% compliance** record in production.
+                            Created a dashboard to track key inventory, utilizing effective visualization tools and thorough data observation. Demonstrated strong data preparation skills, maintaining a 100% compliance record in production.
                         </p>
 
                         <div class="tableau-container mb-4">
