--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f1f5f9; /* Light Gray Background */
+            background-color: #1f2937; /* Dark Gray Background */
         }
         .section-header {
             border-bottom: 2px solid #cbd5e1; /* Gray-300 divider */
