Update Tableau iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </p>
 
                         <div class="tableau-container mb-4">
-                            <iframe src="https://public.tableau.com/views/AmazonSalesAnalysis_17538547769410/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" frameborder="0" allowfullscreen="true" class="w-full h-full"></iframe>
+                            <iframe src="https://public.tableau.com/views/CO2Data_17198142886790/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></iframe>
                         </div>
 
                         <div class="flex justify-between items-center mt-4">
