Update project titles and remove links in index.html

--- a/index.html
+++ b/index.html
@@ -86,20 +86,15 @@
                 <div class="space-y-6">
 
                     <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
-                        <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. E-commerce Sales Performance Analysis</h3>
+                        <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. WIP</h3>
                         <p class="text-md font-medium text-gray-600 mb-3">Goal: Identify sales drivers and operational choke points using beginner tools to inform promotional spending.</p>
                         
                         <p class="text-gray-700 mb-4">
                             Created a dashboard to track key inventory, utilizing effective visualization tools and thorough data observation. Demonstrated strong data preparation skills, maintaining a 100% compliance record in production.
                         </p>
 
-                        <div class="tableau-container mb-4">
-                            <iframe src="https://public.tableau.com/views/CO2Data_17198142886790/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></iframe>
-                        </div>
-
                         <div class="flex justify-between items-center mt-4">
                             <span class="text-sm font-semibold text-blue-600">Foundational SQL, Tableau, Data Cleaning, Sales Forecasting</span>
-                            <a href="YOUR_GITHUB_REPO_URL_FOR_THIS_PROJECT" target="_blank" class="text-sm bg-gray-700 hover:bg-gray-900 text-white font-medium py-2 px-4 rounded-lg">View Code & Analysis</a>
                         </div>
                     </div>
 
@@ -113,7 +108,6 @@
 
                         <div class="flex justify-between items-center mt-4">
                             <span class="text-sm font-semibold text-blue-600">Foundational Python, ML Concepts, Process Logic</span>
-                            <a href="https://github.com/Scan93" target="_blank" class="text-sm bg-gray-700 hover:bg-gray-900 text-white font-medium py-2 px-4 rounded-lg">View Code & Analysis</a>
                         </div>
                     </div>
 
@@ -127,7 +121,6 @@
 
                         <div class="flex justify-between items-center mt-4">
                             <span class="text-sm font-semibold text-blue-600">Python (Conceptual), Association Rules, Retail Strategy</span>
-                            <a href="https://github.com/Scan93" target="_blank" class="text-sm bg-gray-700 hover:bg-gray-900 text-white font-medium py-2 px-4 rounded-lg">View Code & Analysis</a>
                         </div>
                     </div>
 
