Add job responsibilities for recent positions

--- a/index.html
+++ b/index.html
@@ -146,7 +146,18 @@
                         <p class="text-gray-600 italic">Aug 2022 - Mar 2023</p>
                         <ul class="list-disc list-inside mt-2 text-gray-700 space-y-1">
                             <li>Maintained accurate inventory control throughout the supply chain to support business operations.</li>
+                            <li>Unloaded and sorted merchandise trailers efficiently in a team setting.</li>
                             <li>Stocked and organized new merchandise to ensure easy access and accurate inventory.</li>
+                        </ul>
+                    </div>
+
+                    <div class="border-l-4 border-blue-500 pl-4">
+                        <h3 class="text-xl font-semibold text-gray-800">Car Wash Supervisor | Hertz 76</h3>
+                        <p class="text-gray-600 italic">Feb 2014 - Sep 2021</p>
+                        <ul class="list-disc list-inside mt-2 text-gray-700 space-y-1">
+                            <li>Reported carwash chemical and supply inventory to management, ensuring adequate stock and smooth operations.</li>
+                            <li>Led the training and onboarding of all new hires on service procedures, safety protocols, and operational standards.</li>
+                            <li>Oversaw fuel and propane delivery services, demonstrating reliable handling and detailed logistical coordination.</li>
                         </ul>
                     </div>
 
