--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
                         </div>
                     </div>
 
+                     <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
+                        <h3 class="text-2xl font-semibold text-gray-800 mb-2">4. Showcase findings from our dataset and present with a visualizion.</h3>
+                        <p class="text-md font-medium text-gray-600 mb-3">Goal: Use Tableau to create a graph to showcase popularity between all movie categories.</p>
+                        
+                        <p class="text-gray-700 mb-4">
+                            *Add description*
+                        </p>
+
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-sm font-semibold text-blue-600">*Add Summary*</span>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
