--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">SQL (Foundational Querying)</span>
                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Python (Pandas, Data Cleaning)</span>
                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Tableau / Power BI (Data Visualization)</span>
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Advanced Excel (VBA/Modeling) [cite: 5]</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Operational Logistics [cite: 43]</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Inventory Control (Solumina) [cite: 17]</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Schematics Interpretation [cite: 4, 43]</span>
+                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Advanced Excel (VBA/Modeling)</span>
+                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Operational Logistics</span>
+                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Inventory Control (Solumina)</span>
+                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Schematics Interpretation</span>
                 </div>
             </section>
 
@@ -118,32 +118,32 @@
                 <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Previous Experience</h2>
                 <div class="space-y-6">
                     <div class="border-l-4 border-blue-500 pl-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Senior Production Operator | General Dynamics Mission Systems [cite: 12, 13]</h3>
-                        <p class="text-gray-600 italic">Apr 2023 - Current [cite: 14]</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Senior Production Operator | General Dynamics Mission Systems</h3>
+                        <p class="text-gray-600 italic">Apr 2023 - Current</p>
                         <ul class="list-disc list-inside mt-2 text-gray-700 space-y-1">
-                            <li>Achieved 100% compliance with quality standards in bonding and laminating PWBs for space missions[cite: 15, 16].</li>
-                            <li>Utilized Solumina to review schematics and track materials during manufacturing[cite: 17].</li>
-                            <li>Created an automated material inventory system, increasing accuracy and saving tracking time[cite: 18].</li>
+                            <li>Achieved 100% compliance with quality standards in bonding and laminating PWBs for space missions.</li>
+                            <li>Utilized Solumina to review schematics and track materials during manufacturing.</li>
+                            <li>Created an automated material inventory system, increasing accuracy and saving tracking time.</li>
                         </ul>
                     </div>
 
                     <div class="border-l-4 border-blue-500 pl-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Inbound Associate | Target [cite: 19, 20]</h3>
-                        <p class="text-gray-600 italic">Aug 2022 - Mar 2023 [cite: 21]</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Inbound Associate | Target</h3>
+                        <p class="text-gray-600 italic">Aug 2022 - Mar 2023</p>
                         <ul class="list-disc list-inside mt-2 text-gray-700 space-y-1">
-                            <li>Maintained accurate inventory control throughout the supply chain[cite: 22].</li>
-                            <li>Unloaded and sorted merchandise trailers efficiently in a team setting[cite: 23].</li>
-                            <li>Stocked and organized new merchandise to ensure easy access and accurate inventory[cite: 24].</li>
+                            <li>Maintained accurate inventory control throughout the supply chain.</li>
+                            <li>Unloaded and sorted merchandise trailers efficiently in a team setting.</li>
+                            <li>Stocked and organized new merchandise to ensure easy access and accurate inventory.</li>
                         </ul>
                     </div>
 
                     <div class="border-l-4 border-blue-500 pl-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Car Wash Supervisor | Hertz North West - 76 [cite: 25]</h3>
-                        <p class="text-gray-600 italic">Feb 2014 - Sep 2021 [cite: 26]</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Car Wash Supervisor | Hertz North West - 76</h3>
+                        <p class="text-gray-600 italic">Feb 2014 - Sep 2021</p>
                         <ul class="list-disc list-inside mt-2 text-gray-700 space-y-1">
                             <li>Reported chemical and supply inventory to management, ensuring adequate stock.</li>
-                            <li>Led the training and onboarding of new hires on operational standards[cite: 28].</li>
-                            <li>Oversaw fuel and propane delivery services with detailed logistical coordination[cite: 29].</li>
+                            <li>Led the training and onboarding of new hires on operational standards.</li>
+                            <li>Oversaw fuel and propane delivery services with detailed logistical coordination.</li>
                         </ul>
                     </div>
                 </div>
@@ -153,14 +153,14 @@
                 <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Education & Certification</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="p-4 border border-gray-200 rounded-lg">
-                        <h3 class="text-xl font-semibold text-gray-800">Associate in Applied Science, Data Analytics [cite: 37, 38]</h3>
-                        <p class="text-gray-600">Mesa Community College | Aug 2024 - May 2026 [cite: 35, 36]</p>
-                        <p class="text-gray-700 mt-1 font-medium">3.9 GPA [cite: 39] | Dean's List Fall 2024, Spring 2025 [cite: 40, 41]</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Associate in Applied Science, Data Analytics</h3>
+                        <p class="text-gray-600">Mesa Community College | Aug 2024 - May 2026</p>
+                        <p class="text-gray-700 mt-1 font-medium">3.9 GPA | Dean's List Fall 2024, Spring 2025</p>
                     </div>
                     <div class="p-4 border border-gray-200 rounded-lg">
-                        <h3 class="text-xl font-semibold text-gray-800">Google Data Analyst Certification [cite: 44, 45]</h3>
-                        <p class="text-gray-600">Completed August 2024 [cite: 45]</p>
-                        <p class="text-gray-700 mt-1">Foundational mastery in spreadsheets, SQL for database querying, Tableau for visualization, and an introduction to R programming[cite: 46, 47].</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Google Data Analyst Certification</h3>
+                        <p class="text-gray-600">Completed August 2024</p>
+                        <p class="text-gray-700 mt-1">Foundational mastery in spreadsheets, SQL for database querying, Tableau for visualization, and an introduction to R programming.</p>
                     </div>
                 </div>
             </section>
