--- a/index.html
+++ b/index.html
@@ -67,17 +67,26 @@
             <section id="projects" class="mb-10">
                 <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Featured Data Case Study: Top Rated US TV Shows</h2>
                 
-                <div class="space-y-6">
-                    <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
-                        <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
-                        <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
-                        <p class="text-gray-700 mb-4">
-                            Initial exploration of a comprehensive dataset containing 2,000+ US TV shows. Focused on assessing data quality, identifying missing values in "Genre" and "Rating" columns, and preparing the structure for multi-tool analysis.
-                        </p>
-                        <div class="flex justify-between items-center mt-4">
-                            <span class="text-sm font-semibold text-blue-600">Initial Audit: 2,000+ Entries Analyzed</span>
-                        </div>
-                    </div>
+                <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
+    <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
+    <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
+    <p class="text-gray-700 mb-4">
+        Initial exploration of a comprehensive dataset containing 2,000+ US TV shows. Focused on assessing data quality, identifying missing values in "Genre" and "Rating" columns, and preparing the structure for multi-tool analysis.
+    </p>
+
+    <div class="mt-4 flex items-center">
+        <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows.xlsx" 
+           target="_blank" 
+           class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+            <img src="https://cdn.simpleicons.org/microsoftexcel/217346" class="w-4 h-4 mr-2" alt="Excel Logo">
+            View Raw Dataset on GitHub
+        </a>
+    </div>
+
+    <div class="flex justify-between items-center mt-4">
+        <span class="text-sm font-semibold text-blue-600">Initial Audit: 2,000+ Entries Analyzed</span>
+    </div>
+</div>
 
                     <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
                         <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
