Update project card description in index.html
Removed citation from SQL extraction description.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
                         <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders using relational operators.</p>
                         <p class="text-gray-700 mb-4">
-                            Utilized SQL queries to isolate the top 10 performing shows within the "Action and Adventure" category. Applied ORDER BY and LIMIT functions to rank shows by user rating, ensuring precise extraction that mirrors the precision required in my previous technical support roles[cite: 43].
+                            Utilized SQL queries to isolate the top 10 performing shows within the "Action and Adventure" category. Applied ORDER BY and LIMIT functions to rank shows by user rating, ensuring precise extraction that mirrors the precision required in my previous technical support roles.
                         </p>
                         <div class="flex justify-between items-center mt-4">
                             <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying & Ranking</span>
