--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
            target="_blank" 
            class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
             <img src="https://cdn.simpleicons.org/microsoftexcel/217346" class="w-4 h-4 mr-2" alt="Excel Logo">
-            View Raw Sample Dataset on GitHub
+            View Sample Dataset on GitHub
         </a>
         <a href="https://www.kaggle.com/datasets/raveennimbiwal/top-rated-tv-shows-dataset-global-2025"
             target="_blank"
             class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
-            View Original Data File Source
+            View Original Data File From Kaggle
         </a>
     </div>
 
