--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <a href="https://www.kaggle.com/datasets/raveennimbiwal/top-rated-tv-shows-dataset-global-2025"
             target="_blank"
             class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+            <img src="https://www.kaggle.com/static/images/site-logo.svg" class="w-4 h-4 mr-2" alt="Kaggle Logo">
             View Original Data File From Kaggle
         </a>
     </div>
