--- a/index.html
+++ b/index.html
@@ -180,5 +180,42 @@
                 <li>Oversaw fuel and propane delivery services, demonstrating reliable logistical coordination.</li>
             </ul>
         </div>
+        <section id="education" class="mb-10">
+    <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Education & Certification</h2>
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-white">
+            <div class="flex items-center mb-3">
+                <div class="p-2 bg-blue-100 rounded-lg mr-3">
+                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M12 14l9-5-9-5-9 5 9 5z"></path><path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"></path></svg>
+                </div>
+                <h3 class="text-xl font-bold text-gray-800">A.A.S. Data Analytics</h3>
+            </div>
+            <p class="text-gray-600 font-medium">Mesa Community College</p>
+            <p class="text-gray-500 text-sm mb-2">Aug 2024 - May 2026 (Expected)</p>
+            <div class="mt-3 p-2 bg-green-50 border border-green-100 rounded text-green-800 text-sm">
+                <strong>3.9 GPA</strong> | Dean's List: Fall 2024, Spring 2025
+            </div>
+        </div>
+        
+        <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-white">
+            <div class="flex items-center mb-3">
+                <div class="p-2 bg-blue-100 rounded-lg mr-3">
+                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                </div>
+                <h3 class="text-xl font-bold text-gray-800">Google Data Analytics</h3>
+            </div>
+            <p class="text-gray-600 font-medium">Professional Certificate</p>
+            <p class="text-gray-500 text-sm mb-2">Completed August 2024</p>
+            <p class="text-gray-700 text-sm">Foundational mastery in SQL, Tableau, R programming, and data cleaning methodologies.</p>
+        </div>
+    </div>
+
+    <footer class="bg-gray-800 text-white text-center p-8 shadow-inner border-t-4 border-blue-500">
+        <div class="max-w-3xl mx-auto">
+        <p class="text-lg font-light mb-2">Scandal Murty | Data Analyst Portfolio</p>
+        <p class="text-gray-400 text-sm">&copy; 2026. Built with Tailwind CSS. Updated January 2026.</p>
+    </div>
+</footer>
     </div>
 </section>
