Refactor skills section and add operational tech

--- a/index.html
+++ b/index.html
@@ -49,20 +49,55 @@
             </div>
         </header>
 
-        <main class="p-8 flex-grow"> 
+        <main class="p-8 flex-grow">
+    <div class="grid grid-cols-1 lg:grid-cols-4 gap-10">
+        
+        <aside class="lg:col-span-1">
+            <div class="sticky top-8">
+                <h2 class="text-2xl font-bold text-gray-800 mb-6 border-b-2 border-blue-500 pb-2">Technical Toolbox</h2>
+                
+                <div class="space-y-6">
+                    <div>
+                        <h3 class="text-sm font-bold text-blue-600 uppercase tracking-wider mb-3">Core Analytics</h3>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">SQL</span>
+                            <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Python (Pandas)</span>
+                            <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Tableau</span>
+                            <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Power BI</span>
+                        </div>
+                    </div>
 
-            <section id="skills" class="mb-10">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Technical & Analytical Skills</h2>
-                <div class="flex flex-wrap gap-3">
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">SQL (Foundational Querying)</span>
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Python (Pandas, Data Cleaning)</span>
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Tableau / Power BI (Data Visualization)</span>
-                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-sm font-medium rounded-full">Advanced Excel (VBA/Modeling)</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Operational Logistics</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Inventory Control (Solumina)</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-sm font-medium rounded-full">Schematics Interpretation</span>
+                    <div>
+                        <h3 class="text-sm font-bold text-gray-500 uppercase tracking-wider mb-3">Operational Tech</h3>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-xs font-semibold rounded">Solumina</span>
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-xs font-semibold rounded">VBA / Macros</span>
+                            <span class="px-3 py-1 bg-gray-100 text-gray-700 text-xs font-semibold rounded">Advanced Excel</span>
+                        </div>
+                    </div>
+
+                    <div>
+                        <h3 class="text-sm font-bold text-gray-500 uppercase tracking-wider mb-3">Logistics Expert</h3>
+                        <div class="text-gray-600 text-sm space-y-1">
+                            <p>• Inventory Control</p>
+                            <p>• PWB Fabrication</p>
+                            <p>• Quality Compliance</p>
+                        </div>
+                    </div>
                 </div>
-            </section>
+
+                <div class="mt-10 p-4 bg-blue-50 rounded-lg border border-blue-100">
+                    <p class="text-xs text-blue-800 font-medium">Looking for a precision-minded analyst?</p>
+                    <a href="mailto:scandalmurty@gmail.com" class="text-blue-600 text-sm font-bold hover:underline">Get in touch →</a>
+                </div>
+            </div>
+        </aside>
+
+        <div class="lg:col-span-3">
+            </div>
+
+    </div>
+</main>
 
             <section id="projects" class="mb-10">
                 <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Featured Data Case Study: Top 2,000 Highest Rated TV Shows</h2>
