Add dataset links to featured data case study
Added links to sample dataset and original data file from Kaggle.

--- a/index.html
+++ b/index.html
@@ -97,16 +97,18 @@
                     <section id="projects" class="mb-10">
                         <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Featured Data Case Study: Top 2,000 TV Shows</h2>
                         
-                        <div class="space-y-6">
-                            <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
-                                <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
-                                <p class="text-gray-700 mb-4">Initial exploration focusing on data quality and preparing structure for multi-tool analysis.</p>
-                                <div class="flex flex-wrap gap-4 mt-4">
-                                    <a href="#" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Sample on GitHub</a>
-                                    <a href="#" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Kaggle Source</a>
-                                </div>
-                            </div>
+                        <div class="mt-4 flex items-center">
+                            <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv"
+                               target="_blank" 
+                               class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+                            <img src="https://w7.pngwing.com/pngs/878/917/png-transparent-microsoft-excel-icon.png" class="w-4 h-4 mr-2" alt="Excel Logo">View Sample Dataset on GitHub
+                            </a>
+                            <a href="https://www.kaggle.com/datasets/raveennimbiwal/top-rated-tv-shows-dataset-global-2025"
+                                target="_blank"
+                                class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+                            <img src="https://www.kaggle.com/static/images/site-logo.svg" class="w-4 h-4 mr-2" alt="Kaggle Logo">View Original Data File From Kaggle
+                            </a>
+                </div>
 
                             <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
