Add project card for data analysis and extraction

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 <div class="lg:col-span-3">
                     <section id="projects" class="mb-10">
                         <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Featured Data Case Study: Top 2,000 TV Shows</h2>
+
+                         <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
+                                <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Analyzing Our Data Set</h3>
+                                <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders.</p>
+                                <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows. Applied ORDER BY and LIMIT functions for precise extraction.</p>
+                                <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
+                            </div>
                         
                         <div class="mt-4 flex items-center">
                             <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv"
@@ -108,7 +115,7 @@
                                 class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
                             <img src="https://www.kaggle.com/static/images/site-logo.svg" class="w-4 h-4 mr-2" alt="Kaggle Logo">View Original Data File From Kaggle
                             </a>
-                </div>
+                        </div>
 
                             <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
