--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                                 <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders.</p>
                                 <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows. Applied ORDER BY and LIMIT functions for precise extraction.</p>
                                 <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
-                        
-                            <div class="mt-4 flex items-center">
+                                <p class="mt-4 flex items-center">
                                 <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv"
                                    target="_blank" 
                                    class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
