Enhance project details and update GitHub link
Updated project description for clarity and added a link to the dataset sample on GitHub.

--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
                         
                         <div class="space-y-6">
                             <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
-                                <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
-                                <p class="text-gray-700 mb-4">Initial exploration focusing on data quality and preparing structure for multi-tool analysis.</p>
+                            <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
+                            <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
+                            <p class="text-gray-700 mb-4">Initial exploration of a comprehensive dataset containing Top 2,000 Highest Rated TV Shows. Focused on assessing data quality and preparing the structure for multi-tool analysis.
+                        </p>
                                 <div class="flex flex-wrap gap-4 mt-4">
-                                    <a href="#" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Sample on GitHub</a>
+                                    <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Sample on GitHub</a>
                                     <a href="#" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Kaggle Source</a>
                                 </div>
                             </div>
