--- a/index.html
+++ b/index.html
@@ -103,8 +103,18 @@
                             <p class="text-gray-700 mb-4">Initial exploration of a comprehensive dataset containing Top 2,000 Highest Rated TV Shows. Focused on assessing data quality and preparing the structure for multi-tool analysis.
                         </p>
                                 <div class="flex flex-wrap gap-4 mt-4">
-                                    <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Sample on GitHub</a>
-                                    <a href="#" class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">View Kaggle Source</a>
+                                    <a href="https://github.com/Scan93/S.MurtyPortfolio/blob/main/Files/List_of_2000_TV_Shows_Sample.csv"
+                                       target="_blank" 
+                                       class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+                                    <img src="https://w7.pngwing.com/pngs/878/917/png-transparent-microsoft-excel-icon.png" class="w-4 h-4 mr-2" alt="Excel Logo">
+                                        View Sample Dataset on GitHub
+                                </a>
+                                    <a href="https://www.kaggle.com/datasets/raveennimbiwal/top-rated-tv-shows-dataset-global-2025"
+                                        target="_blank"
+                                        class="inline-flex items-center px-4 py-2 bg-white border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 transition duration-150">
+                                    <img src="https://www.kaggle.com/static/images/site-logo.svg" class="w-4 h-4 mr-2" alt="Kaggle Logo">
+                                        View Original Data File From Kaggle
+                                </a>
                                 </div>
                             </div>
 
