Update education heading for clarity

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Education</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="p-4 border border-gray-200 rounded-lg">
-                        <h3 class="text-xl font-semibold text-gray-800">A. A. S. at Mesa Community College, Data Analytics</h3>
+                        <h3 class="text-xl font-semibold text-gray-800">AAS in Data Analytics at Mesa Community College</h3>
                         <p class="text-blue-600">Expected December 2026</p>
                         <p class="text-green-700 mt-1 font-medium">3.9 GPA | Dean's List Fall 2024, Spring 2025</p>
                     </div>
