Refactor project cards for consistent styling

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Featured Data Case Study: Top 2,000 TV Shows</h2>
                         
                         <div class="space-y-6">
-                            <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm bg-gray-50">
+                            <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
                             <h3 class="text-2xl font-semibold text-gray-800 mb-2">1. Data Exploration & Navigation</h3>
                             <p class="text-md font-medium text-gray-600 mb-3">Goal: Navigate and audit a large-scale entertainment dataset.</p>
                             <p class="text-gray-700 mb-4">Initial exploration of a comprehensive dataset containing Top 2,000 Highest Rated TV Shows. Focused on assessing data quality and preparing the structure for multi-tool analysis.
@@ -118,21 +118,21 @@
                                 </div>
                             </div>
 
-                            <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
+                            <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
                                 <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders.</p>
                                 <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows. Applied ORDER BY and LIMIT functions for precise extraction.</p>
                                 <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
                             </div>
 
-                            <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
+                            <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">3. Python Scripting</h3>
                                 <p class="text-md font-medium text-gray-600 mb-3">Goal: Automate "Horror" genre extraction.</p>
                                 <p class="text-gray-700 mb-4">Leveraged Pandas to programmatically identify top shows, demonstrating how automation reduces manual tracking time.</p>
                                 <span class="text-sm font-semibold text-blue-600">Key Technique: Automated Boolean Masking</span>
                             </div>
 
-                            <div class="project-card p-6 border border-gray-200 rounded-lg shadow-sm">
+                            <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">4. Tableau Insight Visualization</h3>
                                 <p class="text-md font-medium text-gray-600 mb-3">Goal: Visualize popularity distributions.</p>
                                 <p class="text-gray-700 mb-4">Translated raw data into a Tableau interactive graph to compare genre popularity and market demand.</p>
@@ -197,12 +197,12 @@
                     <section id="education" class="mt-10">
                         <h2 class="text-3xl font-bold text-gray-800 mb-4 section-header pb-2">Education</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="p-4 border border-gray-200 rounded-lg">
+                    <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-green-500">
                         <h3 class="text-xl font-semibold text-gray-800">AAS in Data Analytics at Mesa Community College</h3>
                         <p class="text-blue-600">Expected December 2026</p>
                         <p class="text-green-700 mt-1 font-medium">3.9 GPA | Dean's List Fall 2024, Spring 2025</p>
                     </div>
-                            <div class="p-4 border border-gray-200 rounded-lg">
+                            <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-green-500">
                         <h3 class="text-xl font-semibold text-gray-800">Google Data Analyst Certification</h3>
                         <p class="text-blue-600">Completed August 2024</p>
                         <p class="text-gray-700 mt-1">Foundational mastery in spreadsheets, SQL for database querying, Tableau for visualization, and an introduction to R programming.</p>
