--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="mt-4 max-w-3xl mx-auto text-gray-200">
                 Aspiring Data Analyst and current Data Analytics student. Proven track record of precision in aerospace
 manufacturing, including the development of an automated material inventory system that increased
-tracking accuracy. Certified in Google Data Analytics with proficiency in SQL, Tableau, and Excel. Seeking
+tracking accuracy. Certified in Google Data Analytics with proficiency in SQL SMS, Tableau, and Excel. Seeking
 to leverage a background in operational logistics and technical problem-solving to deliver data-driven
 insights.
             </p>
@@ -64,7 +64,7 @@ insights.
                             <div>
                                 <h3 class="text-sm font-bold text-blue-600 uppercase tracking-wider mb-3">Core Analytics</h3>
                                 <div class="flex flex-wrap gap-2">
-                                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">SQL</span>
+                                    <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">SQL SMS</span>
                                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Python (Pandas)</span>
                                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Tableau</span>
                                     <span class="px-3 py-1 bg-blue-100 text-blue-800 text-xs font-semibold rounded">Power BI</span>
@@ -123,7 +123,7 @@ insights.
                             </div>
 
                             <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL</h3>
+                                <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL Server Management Studio</h3>
                                 <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders.</p>
                                 <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows. Applied ORDER BY and LIMIT functions for precise extraction.</p>
                                 <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
