--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ insights.
                             <div class="project-card p-6 border border-gray-200 rounded-lg bg-white border-l-4 border-l-yellow-500">
                                     <h3 class="text-2xl font-semibold text-gray-800 mb-2">2. Targeted Extraction with SQL Server Management Studio 22</h3>
                                     <p class="text-md font-medium text-gray-600 mb-3">Goal: Filter "Action & Adventure" leaders.</p>
-                                    <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows from this category. Applied ORDER BY and LIMIT functions for precise extraction.</p>
+                                    <p class="text-gray-700 mb-4">Utilized SQL queries to isolate the top 10 performing shows from this category. Applied ORDER BY and TOP functions for precise extraction.</p>
     
                             <div class="flex justify-between items-center">
                                     <span class="text-sm font-semibold text-blue-600">Key Technique: Relational Querying</span>
